--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<html>
-    <head>
-        <meta>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
 
-    <body>
-        
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data types and operators
+    </title>
+    <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+<script></script>
+
+<script src="./script.js"></script>
+
+</body>
 </html>
