--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data types and operators
+    <title>Conditions
     </title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
