--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conditions
-    </title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <meta charset="UTF-8">
+  <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
 
-<script></script>
+  <!-- 2-->
+
+<button id="myBtn">Open Modal</button>
+<div id="myModal" class="modal">
+ 
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text </p>
+  </div>
+</div>
+
+<!--3-->
+
+<div id="controlPanel">
+  <h1 id = "red" class="button">Red</h1>
+  <h1 id = "yellow" class="button">Yellow</h1>
+  <h1 id = "green" class="button">Green</h1>
+</div>
+
+
+<div id="traffic-light">
+  <div id="redLight" class="bulb"></div>
+  <div id="yellowLight" class="bulb"></div>
+  <div id="greenLight" class="bulb"></div>
+</div>
+
 
 <script src="./script.js"></script>
-
 </body>
-</html>
+</html> 
