--- a/utils/index.html
+++ b/utils/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-  <link rel="stylesheet" href="./css/main.css">
+  <!-- <link rel="stylesheet" href="./css/main.css"> -->
 </head>
 <body>
 
-  <h1>hello</h1>
-  <h1>hello</h1>
 
 <script src="./script.js"></script>
 </body>
